test update sample

--- a/sample.tex
+++ b/sample.tex
@@ -77,7 +77,7 @@
 \addbibresource{sample.bib}
 
 \begin{document}
-\name{Your Name Here}
+\name{Beno\^it Verhaeghe}
 \tagline{Your Position or Tagline Here}
 %% You can add multiple photos on the left or right
 \photoR{2.8cm}{Globe_High}
