--- a/sample.tex
+++ b/sample.tex
@@ -78,21 +78,21 @@
 
 \begin{document}
 \name{Beno\^it Verhaeghe}
-\tagline{Your Position or Tagline Here}
+\tagline{Ingénieur Logiciel}
 %% You can add multiple photos on the left or right
-\photoR{2.8cm}{Globe_High}
+\photoR{2.8cm}{profil}
 % \photoL{2.5cm}{Yacht_High,Suitcase_High}
 
 \personalinfo{%
   % Not all of these are required!
-  \email{your_name@email.com}
-  \phone{000-00-0000}
-  \mailaddress{Åddrésş, Street, 00000 Cóuntry}
-  \location{Location, COUNTRY}
-  \homepage{www.homepage.com}
-  \twitter{@twitterhandle}
+  \email{badetitou@email.com}
+  \phone{+33 6 58 33 53 74}
+  \mailaddress{239, rue brumaire. Appartement 2301. Batiment B}
+  \location{Montpellier, FRANCE}
+  \homepage{badetitou.github.io}
+  \twitter{@badetitou}
   \linkedin{your_id}
-  \github{your_id}
+  \github{benoitverhaeghe}
   %% You MUST add the academicons option to \documentclass, then compile with LuaLaTeX or XeLaTeX, if you want to use \orcid or other academicons commands.
   % \orcid{0000-0000-0000-0000}
   %% You can add your own arbtrary detail with
@@ -116,45 +116,51 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Job Title 1}{Company 1}{Month 20XX -- Ongoing}{Location}
+\cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2018}{Montpellier/Lille, FRANCE}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Migration d'application GWT vers Angular
+\item Mise en place d'architecture hybride
+\item Écriture de papiers de recherche
+\item Enseignement théorie des modèles
 \end{itemize}
 
 \divider
 
-\cvevent{Job Title 2}{Company 2}{Month 20XX -- Ongoing}{Location}
+\cvevent{Ingénieur Logiciel}{Berger-Levrault}{Mars 2018 -- Décembre 2018}{Montpellier, FRANCE}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Analyse de l’architecture des applications de Berger-Levrault
+\item Développement d'outils pour la migration de GWT vers Angular
 \end{itemize}
 
-\cvsection{Projects}
+\cvsection{Projets}
 
-\cvevent{Project 1}{Funding agency/institution}{}{}
+\cvevent{SmartTest}{Inria RMoD}{Juillet 2017}{Lille, FRANCE}
 \begin{itemize}
-\item Details
+\item Sélection de tests automatiques (Pharo)
+\item Développement de différentes stratégies d’exécution de test (Pharo)
 \end{itemize}
 
 \divider
 
-\cvevent{Project 2}{Funding agency/institution}{Project duration}{}
-A short abstract would also work.
+\cvevent{TestsUsageAnalyser}{Inria RMoD}{Avril -- Aout 2017}{Lille, FRANCE}
+\begin{itemize}
+  \item Espion collecteur de données
+\end{itemize}
+  
 
-\medskip
+% \medskip
 
-\cvsection{A Day of My Life}
+% \cvsection{A Day of My Life}
 
-% Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
-% \wheelchart{outer radius}{inner radius}{
-% comma-separated list of value/text width/color/detail}
-\wheelchart{1.5cm}{0.5cm}{%
-  6/8em/accent!30/{Sleep,\\beautiful sleep},
-  3/8em/accent!40/Hopeful novelist by night,
-  8/8em/accent!60/Daytime job,
-  2/10em/accent/Sports and relaxation,
-  5/6em/accent!20/Spending time with family
+% % Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
+% % \wheelchart{outer radius}{inner radius}{
+% % comma-separated list of value/text width/color/detail}
+% \wheelchart{1.5cm}{0.5cm}{%
+%   6/8em/accent!30/{Sleep,\\beautiful sleep},
+%   3/8em/accent!40/Hopeful novelist by night,
+%   8/8em/accent!60/Daytime job,
+%   2/10em/accent/Sports and relaxation,
+%   5/6em/accent!20/Spending time with family
 }
 
 % use ONLY \newpage if you want to force a page break for
@@ -179,76 +185,83 @@ A short abstract would also work.
 %% page if the content is too long.
 \switchcolumn
 
-\cvsection{My Life Philosophy}
+% \cvsection{My Life Philosophy}
 
-\begin{quote}
-``Something smart or heartfelt, preferably in one sentence.''
-\end{quote}
+% \begin{quote}
+% ``Something smart or heartfelt, preferably in one sentence.''
+% \end{quote}
 
-\cvsection{Most Proud of}
+\cvsection{Succès}
 
-\cvachievement{\faTrophy}{Fantastic Achievement}{and some details about it}
-
-\divider
-
-\cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+\cvachievement{\faTrophy}{2ème place Innovation Award}{SmartTest est arrivé deuxième àl’Innovation Award de ESUG2017}
 
 \divider
 
-\cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+\cvachievement{\faHeartbeat}{2ème place Nuit de l’Info}{J’étais responsable d’une équipe durant la Nuit de l’Info 2016}
 
-\cvsection{Strengths}
+% \divider
 
-\cvtag{Hard-working}
-\cvtag{Eye for detail}\\
-\cvtag{Motivator \& Leader}
+% \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
 
-\divider\smallskip
+\cvsection{Compétences}
 
-\cvtag{C++}
-\cvtag{Embedded Systems}\\
-\cvtag{Statistical Analysis}
+\cvtag{Pharo}
+\cvtag{Java/JEE}
+\cvtag{Angular}
+\cvtag{GWT} \\
+\cvtag{Spring}
+\cvtag{C}
 
-\cvsection{Languages}
+\cvsection{Langues}
 
-\cvskill{English}{5}
+\cvskill{Français}{5}
 \divider
 
-\cvskill{Spanish}{4}
-\divider
-
-\cvskill{German}{3}
+\cvskill{Anglais}{4}
 
 %% Yeah I didn't spend too much time making all the
 %% spacing consistent... sorry. Use \smallskip, \medskip,
 %% \bigskip, \vpsace etc to make ajustments.
 \medskip
 
-\cvsection{Education}
+\cvsection{Formation}
 
-\cvevent{Ph.D.\ in Your Discipline}{Your University}{Sept 2002 -- June 2006}{}
-Thesis title: Wonderful Research
-
-\divider
-
-\cvevent{M.Sc.\ in Your Discipline}{Your University}{Sept 2001 -- June 2002}{}
+\cvevent{Ph.D. en Génie Logiciel}{Université de Lille / Berger-Levrault}{Janvier 2019 2002 -- En cours}{}
+Support à la migration d'application GWT vers Angular
 
 \divider
 
-\cvevent{B.Sc.\ in Your Discipline}{Stanford University}{Sept 1998 -- June 2001}{}
+\cvevent{Ingénieur Informatique et Statistique}{Polytech Lille}{Septembre 2015 -- Juillet 2018}{}
+
+\divider
+
+\cvevent{DUT Informatique}{IUT A - Université de Lille}{Sept 2014 -- Juin 2015}{}
 
 % \divider
 
-\cvsection{Referees}
+\cvsection{Hobbies}
 
-% \cvref{name}{email}{mailing address}
-\cvref{Prof.\ Alpha Beta}{Institute}{a.beta@university.edu}
-{Address Line 1\\Address line 2}
+\cvevent{Le Club Info -- Président}{Polytech Lille}{2016 -- 2018}{}
 
 \divider
 
-\cvref{Prof.\ Gamma Delta}{Institute}{g.delta@university.edu}
-{Address Line 1\\Address line 2}
+\cvevent{Tennis de table -- Trésorier}{Lezennes, FRANCE}{2016 -- 2018}{}
+
+\divider
+
+\cvevent{Recherche Historique -- Secrétaire}{CRHL Lezennes, FRANCE}{2014 -- février 2018}{}
+
+
+% \cvsection{Referees}
+
+% % \cvref{name}{email}{mailing address}
+% \cvref{Prof.\ Alpha Beta}{Institute}{a.beta@university.edu}
+% {Address Line 1\\Address line 2}
+
+% \divider
+
+% \cvref{Prof.\ Gamma Delta}{Institute}{g.delta@university.edu}
+% {Address Line 1\\Address line 2}
 
 
 \end{paracol}
