--- a/sample.tex
+++ b/sample.tex
@@ -91,8 +91,8 @@
   \location{Montpellier, FRANCE}
   \homepage{badetitou.github.io}
   \twitter{@badetitou}
-  \linkedin{your_id}
-  \github{benoitverhaeghe}
+  \linkedin{benoitverhaeghe}
+  \github{badetitou}
   %% You MUST add the academicons option to \documentclass, then compile with LuaLaTeX or XeLaTeX, if you want to use \orcid or other academicons commands.
   % \orcid{0000-0000-0000-0000}
   %% You can add your own arbtrary detail with
@@ -131,6 +131,23 @@
 \item Analyse de l’architecture des applications de Berger-Levrault
 \item Développement d'outils pour la migration de GWT vers Angular
 \end{itemize}
+
+\divider
+
+\cvevent{Etudiant-Chercheur}{RMoD - Inria Lille Nord Europe}{Mai -- Septembre 2017}{Villeneuve d'Ascq, France}
+\begin{itemize}
+  \item Développement en Pharo d'un "spy" (TestsUsageAnalyser)
+  \item Ecriture d'un article scientifique pour l'IWST
+  \item Développement d'un outil de sélection de tests (SmartTest)
+\end{itemize}
+
+\divider
+
+\cvevent{Developpeur Informatique}{University of Emden,  Departement Computer Science}{Avril -- Juillet 2015}{Emden, Allemagne}
+\begin{itemize}
+  \item Développement de l'application "Factory Interface"
+\end{itemize}
+
 
 \cvsection{Projets}
 
@@ -197,7 +214,7 @@
 
 \divider
 
-\cvachievement{\faHeartbeat}{2ème place Nuit de l’Info}{J’étais responsable d’une équipe durant la Nuit de l’Info 2016}
+\cvachievement{\faTrophy}{2ème place Nuit de l’Info}{J’étais responsable d’une équipe durant la Nuit de l’Info 2016}
 
 % \divider
 
