--- a/sample.bib
+++ b/sample.bib
@@ -1,45 +1,90 @@
-@ARTICLE{Meyer2000,
-AUTHOR={Bernd Meyer},
-TITLE={A constraint-based framework for diagrammatic reasoning},
-JOURNAL={Applied Artificial Intelligence},
-VOLUME= {14},
-ISSUE = {4},
-PAGES= {327--344},
-YEAR={2000}
+@inproceedings{Verh17a,
+  TITLE = {Usage of Tests in an Open-Source Community},
+  AUTHOR = {Beno{\^i}t Verhaeghe and Vincent Blondeau and Nicolas Anquetil and St{\'e}phane Ducasse},
+  URL = {https://hal.inria.fr/hal-01579106},
+  BOOKTITLE = {IWST'17},
+  ADDRESS = {Maribor, Slovenia},
+  YEAR = {2017},
+  MONTH = sep,
+  KEYWORDS = {Regression Test Selection ; Case study ; Interviews ; Pharo Community},
+  PDF = {https://hal.inria.fr/hal-01579106/file/main.pdf},
+  HAL-ID = {hal-01579106},
+  DOI={10.1145/3139903.3139909},
 }
 
-@ARTICLE{Codishetal2000,
-AUTHOR={M. Codish and K. Marriott and C.K. Taboch},
-TITLE={Improving program analyses by structure untupling},
-JOURNAL={Journal of Logic Programming},
-VOLUME= {43},
-ISSUE = {3},
-PAGES= {251--263},
-YEAR={2000}
+@inproceedings{demeyer2018evaluating,
+  TITLE = {{Evaluating the Efficiency of Continuous Testing during Test-Driven Development}},
+  AUTHOR = {Serge Demeyer and Beno{\^i}t Verhaeghe and Anne Etien and Nicolas Anquetil and St{\'e}phane Ducasse},
+  URL = {https://hal.inria.fr/hal-01717343},
+  BOOKTITLE = {{VST 2018 - 2nd IEEE International Workshop on Validation, Analysis and Evolution of Software Tests}},
+  ADDRESS = {Campobasso, Italy},
+  PAGES = {1-5},
+  YEAR = {2018},
+  MONTH = Mar,
+  KEYWORDS = {continuous testing ; test-driven development ; test selection},
+  PDF = {https://hal.inria.fr/hal-01717343/file/Demeyer201VSTCameraReady.pdf},
+  HAL_ID = {hal-01717343},
+  HAL_VERSION = {v1},
+  DOI={10.1109/VST.2018.8327152},
 }
 
-@inproceedings{Huetal2000,
-author = {J. Hu and H.R. Wu and A. Jennings and X. Wang},
-title = {Fast and robust equalization: A case study},
-booktitle = {Proceedings of the World Multiconference on Systemics, Cybernetics and Informatics, (SCI 2000), Florida, USA, 23-26 July 2000},
-publisher = {International Institute of Informatics and Systemics},
-address = {FL, USA},
-pages = {398--403},
-year = {2000}
+@inproceedings{Verh19a,
+	title = {GUI Migration using MDE from GWT to Angular 6: An Industrial Case},
+	author = {Verhaeghe, Beno{\^i}t and Etien, Anne and Anquetil, Nicolas and Seriai, Abderrahmane and Deruelle, Laurent and Ducasse, St\'ephane and Derras, Mustapha},
+	ANNOTE = {internationconference},
+	HAL-ID = {hal-02019015},
+	abstract = {During the evolution of an application, it happens that developers must change the programming language. In the context of a collaboration with Berger-Levrault, a major IT company, we are working on the migration of a GWT application to Angular. We focus on the GUI aspect of this migration which, even if both frameworks are web Graphical User Interface (GUI) frameworks, is made difficult because they use different programming languages and different organization schema. Such migration is complicated by the fact that the new application must be able to mimic closely the visual aspect of the old one so that the users of the application are not disrupted. We propose an approach in four steps that uses a meta-model to represent the GUI at a high abstraction level. We evaluated this approach on an application comprising 470 Java (GWT) classes representing 56 pages. We are able to model all the web pages of the application and 93% of the widgets they contain, and we successfully migrated 26 out of 39 pages (66%). We give examples of the migrated pages, both successful and not.},
+	year = {2019},
+	ADDRESS = {Hangzhou, China},
+	url = {https://hal.inria.fr/hal-02019015},
+  PDF = {https://hal.archives-ouvertes.fr/hal-02019015/document},
+  DOI={10.1109/SANER.2019.8667989}
 }
 
-@Book{Conway2000,
-author = {Damian Conway},
-title = {Object {O}riented {P}erl: {A} comprehensive guide to concepts and programming techniques},
-publisher = {Manning Publications Co.},
-year = {2000},
-address = {Connecticut, USA}
-}
+@inproceedings{Verh19b,
+  author = {Dutriez, Clement and Verhaeghe, Beno{\^i}t and Derras, Mustapha},
+  title = {Switching of GUI framework: the case from Spec to Spec 2},
+  booktitle = {Proceedings of the 14th Edition of the International Workshop on Smalltalk Technologies},
+  year = {2019},
+  url = {https://hal.archives-ouvertes.fr/hal-02297858},
+  address = {Cologne, Germany},
+  month = aug,
+  keywords = {lse-pub ; GUI ; Modernization ; Spec ; Spec 2},
+  pdf = {https://hal.archives-ouvertes.fr/hal-02297858/file/iwst19.pdf},
+  hal-id = {hal-02297858}}
 
-@inproceedings{zou2013bilingual,
-  title={Bilingual Word Embeddings for Phrase-Based Machine Translation.},
-  author={Zou, Will Y and Socher, Richard and Cer, Daniel M and Manning, Christopher D},
-  booktitle={EMNLP},
-  pages={1393--1398},
-  year={2013}
+@inproceedings{Verh19c,
+  title = {Migration de GWT vers Angular 6 en utilisant l'IDM},
+  author = {Verhaeghe, Beno{\^i}t and Etien, Anne and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
+  url= {https://hal.inria.fr/hal-02304296},
+  booktitle = {Conf{\'e}rence en Ing{\'e}nieriE du Logiciel},
+  address = {Toulouse, France},
+  year = {2019},
+  month = Jun,
+  pdf = {https://hal.inria.fr/hal-02304296/file/ciel2019.pdf},
+  hal_id = {hal-02304296},
+  hal_version = {v1}}
+
+@inproceedings{Verh19d,
+  title = {Migrating GWT to Angular 6 using MDE},
+  author = {Verhaeghe, Beno{\^i}t and Anquetil, Nicolas and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
+  url = {https://hal.inria.fr/hal-02304301},
+  booktitle = {12th Seminar on Advanced Techniques \& Tools for Software Evolution},
+  address = {Bolzano, Italy},
+  year = {2019},
+  month = Jul,
+  pdf = {https://hal.inria.fr/hal-02304301/file/sattose2019.pdf},
+  hal_id = {hal-02304301},
+  hal_version = {v1}}
+
+  @inproceedings{Verh19e,
+  author = {Verhaeghe, Beno{\^i}t and Fuhrman, Christopher and Guerrouj, Latifa and Anquetil, Nicolas and Ducasse, St{\'e}phane},
+  title = {Empirical Study of Programming to an Interface},
+  booktitle = {Proceedings of 34th Conference on Automated Software Engineering (ASE'19)},
+  year = {2019},
+  url = {https://hal.inria.fr/hal-02353681},
+  address = {San Diego, United States},
+  month = nov,
+  pdf = {https://hal.inria.fr/hal-02353681/document},
+  hal-id = {hal-02304301}
 }
