--- a/sample.bib
+++ b/sample.bib
@@ -13,7 +13,7 @@
 }
 
 @inproceedings{demeyer2018evaluating,
-  TITLE = {{Evaluating the Efficiency of Continuous Testing during Test-Driven Development}},
+  TITLE = {Evaluating the Efficiency of Continuous Testing during Test-Driven Development},
   AUTHOR = {Serge Demeyer and Beno{\^i}t Verhaeghe and Anne Etien and Nicolas Anquetil and St{\'e}phane Ducasse},
   URL = {https://hal.inria.fr/hal-01717343},
   BOOKTITLE = {{VST 2018 - 2nd IEEE International Workshop on Validation, Analysis and Evolution of Software Tests}},
@@ -33,7 +33,6 @@
 	author = {Verhaeghe, Beno{\^i}t and Etien, Anne and Anquetil, Nicolas and Seriai, Abderrahmane and Deruelle, Laurent and Ducasse, St\'ephane and Derras, Mustapha},
 	ANNOTE = {internationconference},
 	HAL-ID = {hal-02019015},
-	abstract = {During the evolution of an application, it happens that developers must change the programming language. In the context of a collaboration with Berger-Levrault, a major IT company, we are working on the migration of a GWT application to Angular. We focus on the GUI aspect of this migration which, even if both frameworks are web Graphical User Interface (GUI) frameworks, is made difficult because they use different programming languages and different organization schema. Such migration is complicated by the fact that the new application must be able to mimic closely the visual aspect of the old one so that the users of the application are not disrupted. We propose an approach in four steps that uses a meta-model to represent the GUI at a high abstraction level. We evaluated this approach on an application comprising 470 Java (GWT) classes representing 56 pages. We are able to model all the web pages of the application and 93% of the widgets they contain, and we successfully migrated 26 out of 39 pages (66%). We give examples of the migrated pages, both successful and not.},
 	year = {2019},
 	ADDRESS = {Hangzhou, China},
 	url = {https://hal.inria.fr/hal-02019015},
@@ -75,9 +74,10 @@
   month = Jul,
   pdf = {https://hal.inria.fr/hal-02304301/file/sattose2019.pdf},
   hal_id = {hal-02304301},
-  hal_version = {v1}}
+  hal_version = {v1}
+}
 
-  @inproceedings{Verh19e,
+@inproceedings{Verh19e,
   author = {Verhaeghe, Beno{\^i}t and Fuhrman, Christopher and Guerrouj, Latifa and Anquetil, Nicolas and Ducasse, St{\'e}phane},
   title = {Empirical Study of Programming to an Interface},
   booktitle = {Proceedings of 34th Conference on Automated Software Engineering (ASE'19)},
