add best paper award

--- a/sample.tex
+++ b/sample.tex
@@ -210,7 +210,11 @@
 
 \cvsection{Succès}
 
-\cvachievement{\faTrophy}{2ème place Innovation Award}{SmartTest est arrivé deuxième àl’Innovation Award de ESUG2017}
+\cvachievement{\faTrophy}{Best Paper Award}{Migrating GWT to Angular 6 using MDE @ Sattose}
+
+\divider
+
+\cvachievement{\faTrophy}{2ème place Innovation Award}{SmartTest est arrivé deuxième à l’Innovation Award de ESUG2017}
 
 \divider
 
