--- a/sample.bib
+++ b/sample.bib
@@ -88,3 +88,13 @@
   pdf = {https://hal.inria.fr/hal-02353681/document},
   hal-id = {hal-02304301}
 }
+
+@inproceedings{Brag20b,
+	author = {Santiago Bragagnolo and Beno{\^\i}t Verhaeghe and Abderrahmane Seriai and Mustapha Derras and Anne Etien},
+	title = {Challenges for Layout Validation: Lessons Learned},
+	booktitle = {International Conference on the Quality of Information and Communications Technology, QUATIC'2020},
+	keywords = {kzEvolution},
+	annotate = {internalconference},
+	year = {2020},
+	month = sep
+}
