--- a/sample.bib
+++ b/sample.bib
@@ -1,119 +1,121 @@
-@inproceedings{Verh17a,
-  TITLE = {Usage of Tests in an Open-Source Community},
-  AUTHOR = {Beno{\^i}t Verhaeghe and Vincent Blondeau and Nicolas Anquetil and St{\'e}phane Ducasse},
-  URL = {https://hal.inria.fr/hal-01579106},
-  BOOKTITLE = {IWST'17},
-  ADDRESS = {Maribor, Slovenia},
-  YEAR = {2017},
-  MONTH = sep,
-  KEYWORDS = {Regression Test Selection ; Case study ; Interviews ; Pharo Community},
-  PDF = {https://hal.inria.fr/hal-01579106/file/main.pdf},
-  HAL-ID = {hal-01579106},
-  DOI={10.1145/3139903.3139909}
+@inproceedings{Deme18a,
+  author      = {Demeyer, Serge and Verhaeghe, Beno{\^\i}t and Etien, Anne and Anquetil, Nicolas and Ducasse, St\'ephane},
+  title       = {Evaluating the Efficiency of Continuous Testing during Test-Driven Development},
+  booktitle   = {Proceedings {VST 2018} (2nd IEEE International Workshop on Validation, Analysis and Evolution of Software Tests)},
+  pages       = {1 -- 5},
+  year        = {2018},
+  url         = {https://hal.inria.fr/hal-01717343},
+  pdf         = {https://hal.inria.fr/hal-01717343/document},
+  hal-id      = {hal-01717343},
+  month       = mar,
+  tagnicolasa = {other test},
+  annote      = {internationalworkshop}
 }
 
-@inproceedings{Deme18a,
-  author = {Demeyer, Serge and Verhaeghe, Beno{\^\i}t and Etien, Anne and Anquetil, Nicolas and Ducasse, St\'ephane},
-  title = {Evaluating the Efficiency of Continuous Testing during Test-Driven Development},
-  booktitle = {Proceedings {VST 2018} (2nd IEEE International Workshop on Validation, Analysis and Evolution of Software Tests)},
-  pages = {1 -- 5},
-  year = {2018},
-  url = {https://hal.inria.fr/hal-01717343},
-  pdf = {https://hal.inria.fr/hal-01717343/document},
-  hal-id = {hal-01717343},
-  month = mar,
-  tagnicolasa = {other test},
-  annote = {internationalworkshop}}
-
 @inproceedings{Verh17a,
-  author = {Verhaeghe, Beno{\^\i}t and Nicolas Anquetil and St\'ephane Ducasse and Vincent Blondeau},
-  title = {Usage of Tests in an Open-Source Community},
-  booktitle = {Proceedings of the 12th Edition of the International Workshop on Smalltalk Technologies},
-  pages = {4:1--4:9},
-  publisher = {ACM},
-  year = {2017},
-  doi = {10.1145/3139903.3139909},
-  annote = {internationalworkshop},
-  abstract = {During the development, it is known that tests ensure the good behavior of applications and improve their quality. We studied developers testing behavior inside the Pharo community in the purpose to improve it. In this paper, we take inspiration from a paper of the literature to enhance our comprehension of test habits in our open source community. We report results of a field study on how often the developers use tests in their daily practice, whether they make use of tests selection and why they do. Results are strengthened by interviews with developers involved in the study. The main findings are that developers run tests every modifications of their code they did; most of the time they practice test selection (instead of launching an entire test suite); however they are not accurate in their selection; they change their selection depending on the duration of the tests and; contrary to expectation, test selection is not influenced by the size of the test suite.},
-  series = {IWST '17},
-  isbn = {978-1-4503-5554-4},
-  location = {Maribor, Slovenia},
-  articleno = {4},
-  numpages = {9},
-  address = {New York, NY, USA},
-  keywords = {lse-pub ; Regression Test Selection ; Case study ; Inter- views ; Pharo Community kzChecking},
-  pdf = {http://rmod-files.lille.inria.fr/Team/Texts/Papers/Verh17a-IWST-TestUsage.pdf},
+  author      = {Verhaeghe, Beno{\^\i}t and Nicolas Anquetil and St\'ephane Ducasse and Vincent Blondeau},
+  title       = {Usage of Tests in an Open-Source Community},
+  booktitle   = {Proceedings of the 12th Edition of the International Workshop on Smalltalk Technologies},
+  pages       = {4:1--4:9},
+  publisher   = {ACM},
+  year        = {2017},
+  doi         = {10.1145/3139903.3139909},
+  annote      = {internationalworkshop},
+  abstract    = {During the development, it is known that tests ensure the good behavior of applications and improve their quality. We studied developers testing behavior inside the Pharo community in the purpose to improve it. In this paper, we take inspiration from a paper of the literature to enhance our comprehension of test habits in our open source community. We report results of a field study on how often the developers use tests in their daily practice, whether they make use of tests selection and why they do. Results are strengthened by interviews with developers involved in the study. The main findings are that developers run tests every modifications of their code they did; most of the time they practice test selection (instead of launching an entire test suite); however they are not accurate in their selection; they change their selection depending on the duration of the tests and; contrary to expectation, test selection is not influenced by the size of the test suite.},
+  series      = {IWST '17},
+  isbn        = {978-1-4503-5554-4},
+  location    = {Maribor, Slovenia},
+  articleno   = {4},
+  numpages    = {9},
+  address     = {New York, NY, USA},
+  keywords    = {lse-pub ; Regression Test Selection ; Case study ; Inter- views ; Pharo Community kzChecking},
+  pdf         = {http://rmod-files.lille.inria.fr/Team/Texts/Papers/Verh17a-IWST-TestUsage.pdf},
   tagnicolasa = {other test},
-  hal-id = {hal-01579106}}
+  hal-id      = {hal-01579106}
+}
+
+@inproceedings{Verh19a,
+  author    = {Verhaeghe, Beno{\^i}t and Etien, Anne and Anquetil, Nicolas and Seriai, Abderrahmane and Deruelle, Laurent and Ducasse, St{\'e}phane and Derras, Mustapha},
+  title     = {{GUI} Migration using {MDE} from {GWT} to {Angular} 6: An Industrial Case},
+  booktitle = {2019 IEEE 26th International Conference on Software Analysis, Evolution and Reegineering (SANER)},
+  year      = {2019},
+  url       = {https://hal.inria.fr/hal-02019015}
+}
 
 @inproceedings{Verh19b,
-  author = {Dutriez, Clement and Verhaeghe, Beno{\^i}t and Derras, Mustapha},
-  title = {Switching of {GUI} framework: the case from {Spec} to {Spec} 2},
+  author    = {Dutriez, Clement and Verhaeghe, Beno{\^i}t and Derras, Mustapha},
+  title     = {Switching of {GUI} framework: the case from {Spec} to {Spec} 2},
   booktitle = {Proceedings of the 14th Edition of the International Workshop on Smalltalk Technologies},
-  year = {2019},
-  url = {https://hal.archives-ouvertes.fr/hal-02297858},
-  address = {Cologne, Germany},
-  month = aug,
-  keywords = {lse-pub ; GUI ; Modernization ; Spec ; Spec 2},
-  pdf = {https://hal.archives-ouvertes.fr/hal-02297858/file/iwst19.pdf},
-  hal-id = {hal-02297858}}
+  year      = {2019},
+  url       = {https://hal.archives-ouvertes.fr/hal-02297858},
+  address   = {Cologne, Germany},
+  month     = aug,
+  keywords  = {lse-pub ; GUI ; Modernization ; Spec ; Spec 2},
+  pdf       = {https://hal.archives-ouvertes.fr/hal-02297858/file/iwst19.pdf},
+  hal-id    = {hal-02297858}
+}
 
 @inproceedings{Verh19c,
-  author = {Verhaeghe, Beno{\^i}t and Etien, Anne and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
-  title = {Migration de {GWT} vers {Angular} 6 en utilisant l'{IDM}},
+  author    = {Verhaeghe, Beno{\^i}t and Etien, Anne and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
+  title     = {Migration de {GWT} vers {Angular} 6 en utilisant l'{IDM}},
   booktitle = {Conf{\'e}rence en Ing{\'e}nierie du Logiciel},
-  year = {2019},
-  url = {https://hal.inria.fr/hal-02304296},
-  address = {Toulouse, France},
-  month = jun,
-  pdf = {https://hal.inria.fr/hal-02304296/file/ciel2019.pdf},
-  hal-id = {hal-02304296}}
+  year      = {2019},
+  url       = {https://hal.inria.fr/hal-02304296},
+  address   = {Toulouse, France},
+  month     = jun,
+  pdf       = {https://hal.inria.fr/hal-02304296/file/ciel2019.pdf},
+  hal-id    = {hal-02304296}
+}
 
 @inproceedings{Verh19d,
-  author = {Verhaeghe, Beno{\^i}t and Anquetil, Nicolas and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
-  title = {Migrating {GWT} to {Angular} 6 using {MDE}},
-  booktitle = {12th Seminar on Advanced Techniques \& Tools for Software Evolution},
-  year = {2019},
-  url = {https://hal.inria.fr/hal-02304301},
-  address = {Bolzano, Italy},
-  month = jul,
+  author      = {Verhaeghe, Beno{\^i}t and Anquetil, Nicolas and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
+  title       = {Migrating {GWT} to {Angular} 6 using {MDE}},
+  booktitle   = {12th Seminar on Advanced Techniques \& Tools for Software Evolution},
+  year        = {2019},
+  url         = {https://hal.inria.fr/hal-02304301},
+  address     = {Bolzano, Italy},
+  month       = jul,
   tagnicolasa = {other migration gui},
-  pdf = {https://hal.inria.fr/hal-02304301/file/sattose2019.pdf},
-  hal-id = {hal-02304301}}
+  pdf         = {https://hal.inria.fr/hal-02304301/file/sattose2019.pdf},
+  hal-id      = {hal-02304301}
+}
 
 @inproceedings{Verh19e,
-  author = {Verhaeghe, Beno{\^i}t and Fuhrman, Christopher and Guerrouj, Latifa and Anquetil, Nicolas and Ducasse, St{\'e}phane},
-  title = {Empirical Study of Programming to an Interface},
-  booktitle = {Proceedings of 34th Conference on Automated Software Engineering (ASE'19)},
-  year = {2019},
-  url = {https://hal.inria.fr/hal-02353681},
-  address = {San Diego, United States},
-  month = nov,
+  author      = {Verhaeghe, Beno{\^i}t and Fuhrman, Christopher and Guerrouj, Latifa and Anquetil, Nicolas and Ducasse, St{\'e}phane},
+  title       = {Empirical Study of Programming to an Interface},
+  booktitle   = {Proceedings of 34th Conference on Automated Software Engineering (ASE'19)},
+  year        = {2019},
+  url         = {https://hal.inria.fr/hal-02353681},
+  address     = {San Diego, United States},
+  month       = nov,
   tagnicolasa = {other quality},
-  annote = {internationalworkshop},
-  doi = {10.1109/ASE.2019.00083},
-  pdf = {https://hal.inria.fr/hal-02353681/document},
-  hal-id = {hal-02304301}}
+  annote      = {internationalworkshop},
+  doi         = {10.1109/ASE.2019.00083},
+  pdf         = {https://hal.inria.fr/hal-02353681/document},
+  hal-id      = {hal-02304301}
+}
 
 @inproceedings{Brag20b,
-  author = {Santiago Bragagnolo and Beno{\^\i}t Verhaeghe and Abderrahmane Seriai and Mustapha Derras and Anne Etien},
-  title = {Challenges for Layout Validation: Lessons Learned},
+  author    = {Santiago Bragagnolo and Beno{\^\i}t Verhaeghe and Abderrahmane Seriai and Mustapha Derras and Anne Etien},
+  title     = {Challenges for Layout Validation: Lessons Learned},
   booktitle = {International Conference on the Quality of Information and Communications Technology, QUATIC'2020},
-  year = {2020},
-  keywords = {kzEvolution},
-  annote = {internationalconference},
-  month = sep,
-  url = {https://hal.inria.fr/hal-02914750},
-  pdf = {https://hal.inria.fr/hal-02914750/document},
-  hal-id = {hal-02914750}}
+  year      = {2020},
+  keywords  = {kzEvolution},
+  annote    = {internationalconference},
+  month     = sep,
+  url       = {https://hal.inria.fr/hal-02914750},
+  pdf       = {https://hal.inria.fr/hal-02914750/document},
+  hal-id    = {hal-02914750}
+}
 
 @inproceedings{Anqu20a,
-  author = {Nicolas Anquetil and Anne Etien and Houekpetodji, Mahugnon Honor\'e and Beno{\^\i}t Verhaeghe and St\'ephane Ducasse and Clotilde Toullec and Fatija Djareddir and J\`erome Sudich and Mustapha Derras},
-  title = {Modular Moose:  A new generation of software reengineering platform},
+  author    = {Nicolas Anquetil and Anne Etien and Houekpetodji, Mahugnon Honor\'e and Beno{\^\i}t Verhaeghe and St\'ephane Ducasse and Clotilde Toullec and Fatija Djareddir and J\`erome Sudich and Mustapha Derras},
+  title     = {Modular Moose:  A new generation of software reengineering platform},
   booktitle = {International Conference on Software and Systems Reuse, ICSR2020},
-  year = {2020},
-  pdf = {http://rmod-files.lille.inria.fr/Team/Texts/Papers/Anqu20a-ICSR-Moose.pdf},
-  hal-id={hal-02972159},
-  annote = {internationalconference},
-  keywords = {kzEvolution},
-  month = dec}
+  year      = {2020},
+  pdf       = {http://rmod-files.lille.inria.fr/Team/Texts/Papers/Anqu20a-ICSR-Moose.pdf},
+  hal-id    = {hal-02972159},
+  annote    = {internationalconference},
+  keywords  = {kzEvolution},
+  month     = dec
+}
