--- a/sample.tex
+++ b/sample.tex
@@ -84,37 +84,18 @@
 \tagline{Ingénieur Logiciel}
 %% You can add multiple photos on the left or right
 \photoR{2.8cm}{profil}
-% \photoL{2.5cm}{Yacht_High,Suitcase_High}
 
 \personalinfo{%
   % Not all of these are required!
   \email{badetitou@email.com}
   \phone{+33 6 58 33 53 74}
-  \mailaddress{239, rue brumaire. Appartement 2301. Batiment B}
-  \location{Montpellier, FRANCE}
+  \mailaddress{40, rue Pasteur}
+  \location{59260 Lezennes, FRANCE}
   \homepage{badetitou.github.io}
   \twitter{@badetitou}
   \linkedin{benoitverhaeghe}
   \github{badetitou}
-  \orcid{0000-0000-0000-0000}
-  
-  %% \printinfo{symbol}{detail}[optional hyperlink prefix]
-  % \printinfo{\faPaw}{Hey ho!}[https://example.com/]
-  %% Or you can declare your own field with
-  %% \NewInfoFiled{fieldname}{symbol}[optional hyperlink prefix] and use it:
-  % \NewInfoField{gitlab}{\faGitlab}[https://gitlab.com/]
-  % \gitlab{your_id}
-  %%
-  %% For services and platforms like Mastodon where there isn't a
-  %% straightforward relation between the user ID/nickname and the hyperlink,
-  %% you can use \printinfo directly e.g.
-  % \printinfo{\faMastodon}{@username@instace}[https://instance.url/@username]
-  %% But if you absolutely want to create new dedicated info fields for
-  %% such platforms, then use \NewInfoField* with a star:
-  % \NewInfoField*{mastodon}{\faMastodon}
-  %% then you can use \mastodon, with TWO arguments where the 2nd argument is
-  %% the full hyperlink.
-  % \mastodon{@username@instance}{https://instance.url/@username}
+  \orcid{0000-0002-4588-2698}
 }
 
 \makecvheader
@@ -205,9 +186,9 @@
 
 % \divider
 
-% \printbibliography[heading=pubtype,title={\printinfo{\faFile*[regular]}{Journal Articles}},type=article]
+\printbibliography[heading=pubtype,title={\printinfo{\faFile*[regular]}{Journal Articles}},type=article]
 
-% \divider
+\divider
 
 \printbibliography[heading=pubtype,title={\printinfo{\faUsers}{Conference Proceedings}},type=inproceedings]
 
