add a new journal article

--- a/sample.tex
+++ b/sample.tex
@@ -1,3 +1,4 @@
+
 %%%%%%%%%%%%%%%%%
 % This is an sample CV template created using altacv.cls
 % (v1.6, 21 May 2021) written by LianTze Lim (liantze@gmail.com). Now compiles with pdfLaTeX, XeLaTeX and LuaLaTeX.
@@ -23,6 +24,7 @@
 
 % The paracol package lets you typeset columns of text in parallel
 \usepackage{paracol}
+\usepackage[utf8]{inputenc}
 
 % Change the font if you want to, depending on whether
 % you're using pdflatex or xelatex/lualatex
@@ -80,7 +82,7 @@
 \addbibresource{sample.bib}
 
 \begin{document}
-\name{Beno\^it Verhaeghe}
+\name{Beno{\^\i}t Verhaeghe}
 \tagline{Ingénieur Logiciel}
 %% You can add multiple photos on the left or right
 \photoR{2.8cm}{profil}
