--- a/sample.bib
+++ b/sample.bib
@@ -35,7 +35,7 @@
 }
 
 @inproceedings{Verh19a,
-  author    = {Verhaeghe, Beno{\^i}t and Etien, Anne and Anquetil, Nicolas and Seriai, Abderrahmane and Deruelle, Laurent and Ducasse, St{\'e}phane and Derras, Mustapha},
+  author    = {Verhaeghe, Beno{\^\i}t and Etien, Anne and Anquetil, Nicolas and Seriai, Abderrahmane and Deruelle, Laurent and Ducasse, St{\'e}phane and Derras, Mustapha},
   title     = {{GUI} Migration using {MDE} from {GWT} to {Angular} 6: An Industrial Case},
   booktitle = {2019 IEEE 26th International Conference on Software Analysis, Evolution and Reegineering (SANER)},
   year      = {2019},
@@ -43,7 +43,7 @@
 }
 
 @inproceedings{Verh19b,
-  author    = {Dutriez, Clement and Verhaeghe, Beno{\^i}t and Derras, Mustapha},
+  author    = {Dutriez, Clement and Verhaeghe, Beno{\^\i}t and Derras, Mustapha},
   title     = {Switching of {GUI} framework: the case from {Spec} to {Spec} 2},
   booktitle = {Proceedings of the 14th Edition of the International Workshop on Smalltalk Technologies},
   year      = {2019},
@@ -56,7 +56,7 @@
 }
 
 @inproceedings{Verh19c,
-  author    = {Verhaeghe, Beno{\^i}t and Etien, Anne and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
+  author    = {Verhaeghe, Beno{\^\i}t and Etien, Anne and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
   title     = {Migration de {GWT} vers {Angular} 6 en utilisant l'{IDM}},
   booktitle = {Conf{\'e}rence en Ing{\'e}nierie du Logiciel},
   year      = {2019},
@@ -68,7 +68,7 @@
 }
 
 @inproceedings{Verh19d,
-  author      = {Verhaeghe, Beno{\^i}t and Anquetil, Nicolas and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
+  author      = {Verhaeghe, Beno{\^\i}t and Anquetil, Nicolas and Ducasse, St{\'e}phane and Seriai, Abderrahmane and Deruelle, Laurent and Derras, Mustapha},
   title       = {Migrating {GWT} to {Angular} 6 using {MDE}},
   booktitle   = {12th Seminar on Advanced Techniques \& Tools for Software Evolution},
   year        = {2019},
@@ -81,7 +81,7 @@
 }
 
 @inproceedings{Verh19e,
-  author      = {Verhaeghe, Beno{\^i}t and Fuhrman, Christopher and Guerrouj, Latifa and Anquetil, Nicolas and Ducasse, St{\'e}phane},
+  author      = {Verhaeghe, Beno{\^\i}t and Fuhrman, Christopher and Guerrouj, Latifa and Anquetil, Nicolas and Ducasse, St{\'e}phane},
   title       = {Empirical Study of Programming to an Interface},
   booktitle   = {Proceedings of 34th Conference on Automated Software Engineering (ASE'19)},
   year        = {2019},
@@ -123,7 +123,7 @@
 @article{Verh21a,
   year     = {2021},
   title    = {{GUI} visual aspect migration: a framework agnostic solution},
-  author   = {Verhaeghe, Beno\^it and Anquetil, Nicolas and Etien, Anne and Ducasse, St\'ephane and Seriai, Abderrahmane and Derras, Mustapha},
+  author   = {Verhaeghe, Beno{\^\i}t and Anquetil, Nicolas and Etien, Anne and Ducasse, St\'ephane and Seriai, Abderrahmane and Derras, Mustapha},
   journal  = {Automated Software Engineering},
   issn     = {0928-8910},
   doi      = {10.1007/s10515-021-00284-z},
@@ -133,4 +133,16 @@
   volume   = {28},
   hal-id   = {hal-03256021},
   pdf      = {https://link.springer.com/epdf/10.1007/s10515-021-00284-z?sharing_token=uGynIsRRHShc3wZEPZ4uife4RwlQNchNByi7wbcMAY44F3gcxajwLgNFZBTTtvt9Ze39TcNJgfzugL2qtVGnYyexnPc5xotuhmYx5CMVHbVkuSHoHz1nFEbK1MUblQUdvNP6YXMLdLAG72djsCTEF9cI40mp7yMaWD2gWhSwNAI%3D}
+}
+
+@article{Verh21b,
+  title={From GWT to Angular: An Experiment Report on Migrating a Legacy Web Application},
+  author={Verhaeghe, Beno{\^\i}t and Shatnawi, Anas and Seriai, Abderrahmane and Etien, Anne and Anquetil, Nicolas and Derras, Mustapha and Ducasse, Stephane},
+  journal={IEEE Software},
+  doi = {10.1109/MS.2021.3101249},
+  pdf = {https://hal.archives-ouvertes.fr/hal-03313462/document},
+  abstract = {Berger-Levrault is an international company that developed applications in GWT for more than 10 years. However, GWT is no longer actively maintained, with only one major update since 2015. To avoid being stuck with legacy technology, the company decided to migrate its applications to Angular. However, because of the size of the applications (more than 500 web pages per application), rewriting from scratch is not desirable. To ease the migration, we designed a semi-automated migration approach that helps developers migrate applications' front-end from GWT to Angular and a tool that performs the migration. In this paper, we present our approach and tool. We validated the approach on concrete application migration and compared its benefits to redeveloping the application manually. We report that the semi-automated migration offers an effort reduction over a manual migration. Finally, we present recommendations for future migration projects.},
+  year={2021},
+  had-id = {hal-03313462},
+  publisher={IEEE}
 }
