--- a/sample.tex
+++ b/sample.tex
@@ -89,7 +89,7 @@
 
 \personalinfo{%
   % Not all of these are required!
-  \email{badetitou@email.com}
+  \email{badetitou@gmail.com}
   \phone{+33 6 58 33 53 74}
   \mailaddress{40, rue Pasteur}
   \location{59260 Lezennes, FRANCE}
