--- a/sample.tex
+++ b/sample.tex
@@ -93,7 +93,7 @@
   \phone{+33 6 58 33 53 74}
   \mailaddress{40, rue Pasteur}
   \location{59260 Lezennes, FRANCE}
-  \homepage{badetitou.github.io}
+  \homepage{badetitou.fr}
   \twitter{@badetitou}
   \linkedin{benoitverhaeghe}
   \github{badetitou}
@@ -112,7 +112,7 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2018}{Montpellier/Lille, FRANCE}
+\cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2019}{Montpellier/Lille, FRANCE}
 \begin{itemize}
 \item Migration d'application GWT vers Angular
 \item Mise en place d'architecture hybride
