--- a/sample.bib
+++ b/sample.bib
@@ -148,7 +148,7 @@
 }
 
 @inproceedings{Verh21c,
-  author = {Verhaeghe, Beno{\^i}t and Shatnawi, Anas and Seriai, Abderrahmane and Anquetil, Nicolas and Etien, Anne and Ducasse, St{\'e}phane and Derras, Mustapha},
+  author = {Verhaeghe, Beno{\^\i}t and Shatnawi, Anas and Seriai, Abderrahmane and Anquetil, Nicolas and Etien, Anne and Ducasse, St{\'e}phane and Derras, Mustapha},
   title = {Migrating GUI behavior: from GWT to Angular},
   booktitle = {International Conference on Software Maintenance and Evolution},
   url = {https://hal.archives-ouvertes.fr/hal-03341866},
