--- a/sample.tex
+++ b/sample.tex
@@ -243,7 +243,7 @@
 
 \cvsection{Formation}
 
-\cvevent{Ph.D. en Génie Logiciel}{Université de Lille / Berger-Levrault}{Janvier 2019 2002 -- En cours}{}
+\cvevent{Ph.D. en Génie Logiciel}{Université de Lille / Berger-Levrault}{Janvier 2019 -- Octobre 2021}{}
 Support à la migration d'application GWT vers Angular
 
 \divider
