add a s to migration

--- a/sample.tex
+++ b/sample.tex
@@ -114,7 +114,7 @@
 
 \cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2019}{Montpellier/Lille, FRANCE}
 \begin{itemize}
-\item Migration d'application GWT vers Angular
+\item Migration d'applications GWT vers Angular
 \item Mise en place d'architecture hybride
 \item Écriture de papiers de recherche
 \item Enseignement théorie des modèles
@@ -244,7 +244,7 @@
 \cvsection{Formation}
 
 \cvevent{Ph.D. en Génie Logiciel}{Université de Lille / Berger-Levrault}{Janvier 2019 -- Octobre 2021}{}
-Support à la migration d'application GWT vers Angular
+Support à la migration d'applications GWT vers Angular
 
 \divider
 
