end this experience

--- a/sample.tex
+++ b/sample.tex
@@ -112,7 +112,16 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2019}{Montpellier/Lille, FRANCE}
+\cvevent{Ingénieur R&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\begin{itemize}
+\item Migration d'applications
+\item Encadrement de doctorants et de stagiaires
+\item Écriture de papiers de recherche
+\end{itemize}
+
+\divider
+
+\cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2019 -- Octobre 2021}{Montpellier/Lille, FRANCE}
 \begin{itemize}
 \item Migration d'applications GWT vers Angular
 \item Mise en place d'architecture hybride
