--- a/sample.tex
+++ b/sample.tex
@@ -91,8 +91,8 @@
   % Not all of these are required!
   \email{badetitou@gmail.com}
   \phone{+33 6 58 33 53 74}
-  \mailaddress{40, rue Pasteur}
-  \location{59260 Lezennes, FRANCE}
+  \mailaddress{34bis, avenue Jean Jaurès}
+  \location{38600 Fontaine, FRANCE}
   \homepage{badetitou.fr}
   \twitter{@badetitou}
   \linkedin{benoitverhaeghe}
@@ -112,7 +112,7 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Ingénieur R&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\cvevent{Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
 \begin{itemize}
 \item Migration d'applications
 \item Encadrement de doctorants et de stagiaires
@@ -187,7 +187,6 @@
 
 % use ONLY \newpage if you want to force a page break for
 % ONLY the current column
-\newpage
 
 \cvsection{Publications}
 
@@ -202,6 +201,10 @@
 \divider
 
 \printbibliography[heading=pubtype,title={\printinfo{\faUsers}{Conference Proceedings}},type=inproceedings]
+
+\divider
+
+\printbibliography[heading=pubtype,title={\printinfo{\faUsers}{PhD thesis}},type=thesis]
 
 %% Switch to the right column. This will now automatically move to the second
 %% page if the content is too long.
